# simple-raytracer

./: .gitignore  CMakeLists.txt  README.md  run.sh
includes/: camera.hpp  colour.hpp  hit.hpp  m_dielectric.hpp  m_lambertian.hpp  m_metal.hpp  material.hpp  point.hpp  ray.hpp  raytracer.hpp  sphere.hpp  vec3.hpp
libs/materials/: CMakeLists.txt  m_dielectric.cpp  m_lambertian.cpp  m_metal.cpp
libs/structures/: CMakeLists.txt  ray.cpp  sphere.cpp  vec3.cpp
libs/utilities/: CMakeLists.txt  hit.cpp
src/: main.cpp
